[gd_scene load_steps=9 format=3 uid="uid://bvsfexlw1hvsx"]

[ext_resource type="PackedScene" uid="uid://b7leqvhsa8ldp" path="res://scenes/counters/StandardCounter.tscn" id="1"]
[ext_resource type="Theme" uid="uid://fdky2ckfobqg" path="res://resources/theme.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://ihe7mpeaajeh" path="res://resources/sprites/buttons/-.png" id="2_2xido"]
[ext_resource type="Script" path="res://scenes/counters/Feature.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://bgjk7vnxodgu8" path="res://resources/sprites/buttons/press-.png" id="3_j04w5"]
[ext_resource type="Texture2D" uid="uid://bkiqaws7da5q1" path="res://resources/sprites/buttons/+.png" id="5_kguy0"]
[ext_resource type="Texture2D" uid="uid://4scsaxa35m1k" path="res://resources/sprites/buttons/press-+.png" id="6_cyw3l"]

[sub_resource type="StyleBoxEmpty" id="1"]

[node name="Feature" type="VBoxContainer" groups=["features"]]
custom_minimum_size = Vector2(0, 50)
offset_right = 116.0
offset_bottom = 83.0
theme = ExtResource("2")
alignment = 1
script = ExtResource("3")
ability_name = "Conducir"

[node name="Label" type="HBoxContainer" parent="."]
layout_mode = 2
mouse_default_cursor_shape = 2
alignment = 1

[node name="Minus" type="TextureButton" parent="Label"]
layout_mode = 2
texture_normal = ExtResource("2_2xido")
texture_pressed = ExtResource("3_j04w5")

[node name="Label" type="LineEdit" parent="Label"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource("2")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/read_only = SubResource("1")
text = "Ability"
alignment = 1
editable = false

[node name="Plus" type="TextureButton" parent="Label"]
layout_mode = 2
texture_normal = ExtResource("5_kguy0")
texture_pressed = ExtResource("6_cyw3l")

[node name="StandardCounter" parent="." instance=ExtResource("1")]
layout_mode = 2
mouse_default_cursor_shape = 2

[connection signal="pressed" from="Label/Minus" to="." method="level_down"]
[connection signal="gui_input" from="Label/Label" to="." method="_on_ability_click"]
[connection signal="text_changed" from="Label/Label" to="." method="set_name"]
[connection signal="pressed" from="Label/Plus" to="." method="level_up"]
[connection signal="gui_input" from="StandardCounter" to="." method="_on_ability_click"]
